--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Gene Yang",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "jimp": "^0.22.12",
-    "pixelmatch": "^5.3.0"
+    "octokit": "^3.2.0",
+    "pixelmatch": "^5.3.0",
+    "sharp": "^0.33.3"
   }
 }
